css .frame changes

--- a/Part-2/Rothko-Painting/styles.css
+++ b/Part-2/Rothko-Painting/styles.css
@@ -6,12 +6,12 @@
   filter: blur(2px);
 }
 
-/* .frame {
+.frame {
   border: 50px solid black;
   width: 500px;
   padding: 50px;
   margin: 20px auto;
-} */
+}
 
 .one {
   width: 425px;
