--- a/Part-3/Product Landing Page/styles.css
+++ b/Part-3/Product Landing Page/styles.css
@@ -58,5 +58,30 @@ nav > ul > li:hover{
   color: black;
 }
 
+h1{
+  margin: 20px   0px;
+  padding: 10px;
+  text-align: center;
+  font-size: 30px;
+}
+
+#email{
+  display: block;
+  justify-content: center;
+  margin: 0 70vh;
+  width: 200px;
+  height: 28  px;
+  margin-top: -20px;
+}
+
+#submit{
+  background-color: rgb(225, 225, 170);
+  padding: 5px;
+  margin: 10px 80vh;
+  width: 100px;
+ 
+}
+
+
 
 
